Fix version mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -818,7 +818,7 @@ button {
 }
 
 .cta-image-wrapper img {
-  max-width: 90%;
+  max-width: 80%;
   height: auto;
 }
 
